add imagens + style form

--- a/interactive-card/src/app/components/form/form.component.html
+++ b/interactive-card/src/app/components/form/form.component.html
@@ -1,1 +1,18 @@
-<p>form works!</p>
+<form class="content-form" action="">
+  <div class="content__nome-cartao">
+    <label>NOME NO CARTÃO</label>
+    <input type="text" placeholder="ex. Jane Appleseed" />
+  </div>
+  <div class="content__nome-cartao">
+    <label>NÚMERO DO CARTÃO</label>
+    <input type="number" placeholder="ex. 1234 5678 9173 0000" />
+  </div>
+  <div class="content-dados">
+    <div class="dados__data">
+      <input type="number" placeholder="MM" />
+      <input type="number" placeholder="YY" />
+    </div>
+    <input class="content-validade__cvc" type="number" placeholder="ex. 123" />
+  </div>
+    <button class="button">Confirmar</button>
+</form>
