--- a/interactive-card/src/app/pages/home/home.component.html
+++ b/interactive-card/src/app/pages/home/home.component.html
@@ -1,8 +1,18 @@
 <main>
-  <div>
-    <div class="background-img">
-
+  <div class="content">
+    <img
+      class="img-card-front"
+      src="../../../assets/imgs/bg-card-front.png"
+      alt=""
+    />
+    <img
+    class="img-card-back"
+    src="../../../assets/imgs/bg-card-back.png"
+    alt=""
+  />
+    <div class="background-img"></div>
+    <div class="content-form">
+      <app-form></app-form>
     </div>
-    <div></div>
   </div>
 </main>
